--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <h1>Jay Prakash</h1>
         <h2>Android / Web Developer</h2>
         <div id="menu">
-            <a onclick="showabout()">about</a>
-            <a onclick="showwork()">work</a>
-            <a onclick="showcontact()">contact</a>
+            <a onclick="showabout()">About</a>
+            <a onclick="showwork()">Work</a>
+            <a onclick="showcontact()">Contact</a>
         </div>
         <table>
                 <tr>
@@ -113,7 +113,7 @@
                 </p>
 
                 <a href="https://jvjplus.github.io/resume/" target="_blank">
-                    <button class="btn_two">
+                    <button class="btn_two" style="margin:2vh 0;">
                         Resume
                     </button>
                 </a>
@@ -126,23 +126,23 @@
             <section>
                 <a href="https://goo.gl/maps/eSfpCDVmc972PaBr8" target="_blank" style="text-decoration:none;">
                     <i style="color: white;" class="fas fa-map-marker-alt"></i>
-                    <p style="display: inline-block; color:white">&nbsp;Telco, Jamshedpur, Jharkhand</p>
+                    <p style="display: inline-block; color:white; margin:2% 0">&nbsp;Jamshedpur, Jharkhand</p>
                 </a><br>
                 
                 <a href="https://wa.me/919835582472?text=Hi Jay!!" target="_blank"style="text-decoration:none;">
                     <i style="color: white;" class="fas fa-mobile-alt"></i>
-                    <p style="display: inline-block; color:white">&nbsp;9835582472</p>
+                    <p style="display: inline-block; color:white; margin:2% 0">&nbsp;9835582472</p>
                 </a><br>
                     
                 <a href="mailto:jvjplus@gmail.com?Subject=Hello" target="_top"style="text-decoration:none;">
                     <i style="color: white;" class="far fa-envelope"></i>
-                    <p style="display: inline-block; color:white">&nbsp;jvjplus@gmail.com</p>
+                    <p style="display: inline-block; color:white; margin:2% 0">&nbsp;jvjplus@gmail.com</p>
                 </a><br>
   
 
                 <a href="https://www.facebook.com/JVJplus" target="_top"style="text-decoration:none;">
                     <i style="color: white;" class="fab fa-facebook"></i>
-                    <p style="display: inline-block; color:white">&nbsp;Facebook</p>
+                    <p style="display: inline-block; color:white; margin:2% 0">&nbsp;Facebook</p>
                 </a><br>
 
             </section>
