--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="https://raw.githubusercontent.com/JVJplus/resources/master/jvj%2B%20logo%20final.png" type="image/gif" sizes="16x16">
 </head>
 <body>
     <div id="loading">
