--- a/index.html
+++ b/index.html
@@ -63,8 +63,18 @@
     <link rel='preconnect' href='https://secureservercdn.net' crossorigin />
     <link rel='shortlink' href='https://jvjplus.github.io/' />
 
-
+    <!-- Google Console-->
     <meta name="google-site-verification" content="1ZAXcWOlNKVI9yRpFdDJ0bgkYY7-d79YI2bmLc_E4HU" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-301FPR7QXM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-301FPR7QXM');
+</script>
 
 </head>
 
